bin_PROGRAMS=omc
omc_SOURCES= \
	omc.h omc.c \
	cfgparser.h cfgparser.c \
	widget.h widget.c \
	filter.h filter.c \
	infos.h infos.c \
	player.h player.c \
	screen.h screen.c \
	screen_main.h screen_main.c \
	screen_audio.h screen_audio.c \
	screen_video.h screen_video.c \
	screen_tv.h screen_tv.c \
	screen_image.h screen_image.c \
	screen_settings.h screen_settings.c \
	screen_aplayer.h screen_aplayer.c
