bin_PROGRAMS=omc
omc_SOURCES= \
	omc.h omc.c \
	cfgparser.h cfgparser.c \
	langinfo.h langinfo.c \
	lang_i18n.h lang_i18n.c \
	exmllexer.h exmllexer.c \
	exmlparser.h exmlparser.c \
	widget.h widget.c \
	filter.h filter.c \
	infos.h infos.c \
	gfx.h gfx.c \
	avplayer.h avplayer.c \
	av_demuxer.h av_demuxer.c \
	amazon.h amazon.c \
	screen.h screen.c \
	screen_main.h screen_main.c \
	screen_audio.h screen_audio.c \
	screen_video.h screen_video.c \
	screen_tv.h screen_tv.c \
	screen_image.h screen_image.c \
	screen_settings.h screen_settings.c \
	screen_viewer.h screen_viewer.c \
	screen_aplayer.h screen_aplayer.c
